--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,13 @@
 version: 2.1
+
 orbs:
-  ruby: circleci/ruby@0.1.2 
+ android: circleci/android@0.2.0
 
 jobs:
   build:
-    docker:
-      - image: circleci/ruby:2.6.3-stretch-node
-    executor: ruby/default
+    executor: android/android
+        
     steps:
       - checkout
       - run:
-          name: Which bundler?
-          command: bundle -v
-      - ruby/bundle-install
-      cd ~\
-wget https://github.com/ipfs/go-ipfs/releases/download/v0.6.0/go-ipfs-v0.6.0_windows-386.zip -Outfile go-ipfs-v0.6.0.zip
-
+          command: ./gradlew build
