--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,26 @@
-version: 2.1
+Hello and Welcome to IPFS!
 
-orbs:
- android: circleci/android@0.2.0
+██╗██████╗ ███████╗███████╗
+██║██╔══██╗██╔════╝██╔════╝
+██║██████╔╝█████╗  ███████╗
+██║██╔═══╝ ██╔══╝  ╚════██║
+██║██║     ██║     ███████║
+╚═╝╚═╝     ╚═╝     ╚══════╝
 
-jobs:
-  build:
-    executor: android/android
-        
-    steps:
-      - checkout
-      - run:
-          command: ./gradlew build
+If you see this, you have successfully installed
+IPFS and are now interfacing with the ipfs merkledag!
+
+ -------------------------------------------------------
+| Warning:                                              |
+|   This is alpha software. use at your own discretion! |
+|   Much is missing or lacking polish. There are bugs.  |
+|   Not yet secure. Read the security notes for more.   |
+ -------------------------------------------------------
+
+Check out some of the other files in this directory:
+
+  ./about
+  ./help
+  ./quick-start     <-- usage examples
+  ./readme          <-- this file
+  ./security-notes
